Phone gap fixed
Gap under send button and footer on phone.

--- a/style.css
+++ b/style.css
@@ -648,6 +648,14 @@ option{
   cursor: pointer; 
 }
 
+
+@media (max-width: 768px) {
+  #gap{
+    width: 100%;
+    height: 5vh;
+  }
+}
+
 /* FOOTER SECTION */
 
 footer {
